Fix page component scroll down styling issue on IOS

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,10 +144,10 @@ ul {
   background-color: #01d8da;
   content: '';
   position: absolute;
-  top: 0;
+  top: -80px;
   left: 0;
   width: 100%;
-  height: 130px;
+  height: 210px;
 }
 
 .section-heaeder::before {
